morning updates to correct nav spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,6 +324,7 @@ h3:active {
     padding: 10px;
     text-align: center;
   }
+
 }
 
 @media screen and (max-width: 640px) {
@@ -332,17 +333,20 @@ h3:active {
     margin: 0 auto;
     clear: both;  
   }
-  .main-section {
-  }
 
   .mainimage {
     float: none;
-    width: 100%;
+    width: 75%;
+    margin: 0 auto 0 auto;
+    display: block;
     padding-bottom: 15px;
+
   }
+
   h1 {
     text-align: center;
   }
+
   nav {
     float: none;
     margin: auto;
@@ -355,6 +359,20 @@ h3:active {
 
   .work {
     width: 100%;
+  }
+
+  #main-container {
+    padding: 10px;
+  }
+
+  nav a {
+    width: 30%;
+    display: inline-block;
+    padding-left: 0px;
+    margin-left: 0px;
+    margin-top: 15px;
+    line-height: 18px;
+    text-align: center;
   }
 }
 
